# linear_regression_model

./: Cargo.toml  README.md
src/: main.rs
